--- a/README
+++ b/README
@@ -3,4 +3,13 @@ CheatSheets for wallpapers
 
 Directory and Description of Wallpapers
 ---
--[ ] html5 
+-[ ] html5
+
+
+Contributing
+---
+Pull Request Accepted!
+
+License
+---
+WTFPL 
