adding README formating

--- a/README
+++ b/README
@@ -1,15 +1,15 @@
 CheatSheets for wallpapers 
-===
+=====
 
 Directory and Description of Wallpapers
----
--[ ] html5
--[ ] regular expressions 
+-----
+-html5
+-regular expressions 
 
 Contributing
----
+-----
 Pull Request Accepted!
 
 License
----
+-----
 WTFPL 
