--- a/README
+++ b/README
@@ -1,15 +1,17 @@
 CheatSheets for wallpapers 
-=====
+==========================
 
 Directory and Description of Wallpapers
------
+---------------------------------------
 -html5
+-machine learning
 -regular expressions 
 -VIM
+
 Contributing
------
+------------
 Pull Request Accepted!
 
 License
------
+-------
 WTFPL 
